<resources>
    <string name="app_name">FakeGramMobile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="auth_token_bearer">auth_token</string>
    <string name="register">register</string>
    <string name="lastName">last name</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="userDescription">few word about you...</string>
    <string name="status">status</string>
    <string name="hashtag">#hashtags</string>
    <string name="post_text">Text of post</string>
    <string name="add_post">Add post</string>
    <string name="subscribe">Subscribe</string>
    <string name="set_dislike">&#128078;</string>
    <string name="fa_heart_o">&#128077;</string>
    <string name="settings">⚙</string>
</resources>